# opencode-hive-archon

./: .env.example  .gitignore  .ubsignore  AGENTS.md  LICENSE  PRD.md  README.md  memory.md  mvp.md  opencode.json  pytest.ini
backend/: pyproject.toml
backend/docs/: schema.md
backend/migrations/: 001_knowledge_schema.sql  002_extend_source_origin.sql  003_schema_versions.sql  004_integrity_constraints.sql  005_content_hash.sql  006_chunk_status.sql  007_optimistic_locking.sql  008_fulltext_search.sql  009_hybrid_search.sql  010_trigram_search.sql
backend/scripts/: check_migrations.py  generate_schema_docs.py
backend/src/second_brain/: __init__.py  config.py  deps.py  errors.py  logging_config.py  mcp_server.py  schemas.py
backend/src/second_brain/agents/: __init__.py  recall.py
backend/src/second_brain/contracts/: __init__.py  context_packet.py  conversation.py  knowledge.py  trace.py
backend/src/second_brain/ingestion/: __init__.py  markdown.py
backend/src/second_brain/orchestration/: __init__.py  fallbacks.py  planner.py  retrieval_router.py
backend/src/second_brain/services/: __init__.py  concurrent_writes.py  conversation.py  dedup.py  lifecycle.py  (+10 more)
backend/tests/: conftest.py  test_chunk_lifecycle.py  test_concurrent_writes.py  test_config.py  test_constraints.py  test_dedup.py  test_errors.py  test_fulltext_search.py  test_hybrid_search.py  test_logging_config.py  test_migration_policy.py  test_migration_runner.py  test_optimistic_locking.py  test_pool.py  test_schema_docs.py  test_schema_manager.py  test_transactions.py  test_trigram_search.py
(+272 files in other folders)
