[project]
name = "second-brain"
version = "0.1.0"
description = "Second Brain hybrid retrieval system"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "voyageai>=0.3",
    "supabase>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend/src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
